<resources>
    <string name="app_name">My First App2</string>
    <string name="hello_world_text">0</string>
    <string name="random_heading">Here is a random number between 0 and %1d.</string>
    <string name="id_and_name">1415088 홍정수</string>
    <string name="count">Count</string>
    <string name="toast">Toast</string>
    <string name="random">Random</string>
    <string name="r">R</string>
</resources>
